--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: cotes2020/jekyll-theme-chirpy
+title: UCL-COMP0016-2020-Team-20
+description: Development Blog for Team 20's UCL CS COMP0016 industry project (2020/21). Team members: Matthew Schulz, Shubham Jain, Mateusz Zielinski.
