--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,26 @@
-remote_theme: jekyll/minima
 title: UCL-COMP0016-2020-Team-20
 description: "Development Blog for Team 20's UCL CS COMP0016 industry project (2020/21). Team members: Matthew Schulz, Shubham Jain, Mateusz Zielinski."
+
+# Build settings
+remote_theme: jekyll/minima
+plugins:
+  - jekyll-feed
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
