--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: UCL-COMP0016-2020-Team-20
 description: "Development Blog for Team 20's UCL CS COMP0016 industry project (2020/21). Team members: Matthew Schulz, Shubham Jain, Mateusz Zielinski."
 
 # Build settings
-remote_theme: jekyll/minima
+theme: minima
 plugins:
   - jekyll-feed
 # Exclude from processing.
